feat: 즐겨찾기 목록 조회 API 반환 값 변경